--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "typescript": "^4.8.4"
     },
     "dependencies": {
+        "@types/bcryptjs": "^2.4.2",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
