--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     },
     "dependencies": {
         "@types/bcryptjs": "^2.4.2",
+        "@types/jsonwebtoken": "^8.5.9",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.1",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.10.0",
         "mongoose": "^6.6.5"
     }
